# mprpc

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  autobuild.sh  compose.yaml
.cache/clangd/index/: callfriendservice.cc.A3DEB93D2CDECF63.idx  calluserservice.cc.7529078C92F196FE.idx  firendservice.cc.93B918DBE9CCE1F9.idx  friend.pb.cc.2C3D511017D073DC.idx  friend.pb.h.5ECB7DFBEE5ED137.idx  lockqueue.h.1FF8BD526EB000FF.idx  logger.cc.738773717BAF4CBC.idx  logger.h.1C856DB30921696E.idx  mprpcapplication.cc.D0B6616AD2B3D781.idx  mprpcapplication.h.4D1482B79A42748D.idx  mprpcchannel.cc.08DCDB953C473809.idx  mprpcchannel.h.382DDC6701B73473.idx  mprpcconfig.cc.AFB1A2A5F5829B6E.idx  mprpcconfig.h.E618303CFA093DB1.idx  mprpccontroller.cc.B7F9FDC58ACB70E6.idx  mprpccontroller.h.902DE33649EB3A54.idx  mprpcprovider.cc.92C0B3F6639147EE.idx  mprpcprovider.h.134C931887B79C8C.idx  rpcherder.pb.cc.55E969745949645F.idx  rpcherder.pb.h.9673C84596DCF36A.idx  rpcherder.pb.h.D02B5F73355D5F06.idx  rpcprovider.cc.457C17CE7203EA41.idx  rpcprovider.h.25452349E530126C.idx  user.pb.cc.A50E67EFEDEB2162.idx  user.pb.h.9E753D442484286F.idx  userservice.cc.C5CA6C2097E053EC.idx  zookeeperutil.cc.DD11F27BF96EC8F2.idx  zookeeperutil.h.01A8C9E74C803094.idx
config/: mprpc.example.conf
config/local/: client.conf  friendservice.conf  userservice.conf
docker/: mprpc-entrypoint.sh
example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  firendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
scripts/: deps-up.sh
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcherder.pb.cc  rpcherder.pb.h  rpcherder.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h  rpcherder.pb.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
